# qarnot-technical-test

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
s3_synchroniser/: main.py
s3_synchroniser/lib/files_manager/: files_manager.py
s3_synchroniser/lib/logger/: logger.py
s3_synchroniser/lib/s3_manager/: s3_config.py  s3_manager.py
s3_synchroniser/lib/sync/: sync.py
tests/lib/files_manager/: test_files_manager.py
