[tool.poetry]
name = "s3_synchroniser"
version = "0.1.0"
description = "Project aiming to sync local files with a S3 storage solution"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "s3_synchroniser" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.63"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.4"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
