[project]
name = "qarnot-technical-test"
version = "0.1.0"
description = "Project created in order to make possible a synchro between a local storage and a remote S3 storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.78",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]
